# engine-cross-platform

./: .gitmodules  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: BaseTypes.h.1AB9D377C81B0BC5.idx  CodeGen.cpp.1BC0660F1530F701.idx  Common.h.66547A15D906B6F3.idx  Constant.cpp.9C8D1AC71C55E52E.idx  ConstantUnion.h.7619728750BCC873.idx  DirStackFileIncluder.h.2FD9E3F7F6891F27.idx  GLSL.ext.AMD.h.2957116E896C0FA8.idx  GLSL.ext.EXT.h.D6D8F008FC76F5BB.idx  GLSL.ext.KHR.h.AAC7C68A262B7FC9.idx  GLSL.ext.NV.h.1911BA52FA9C840F.idx  GLSL.std.450.h.1FC6E6AE145C9964.idx  GlslangToSpv.cpp.FAD985CE4D6645CF.idx  GlslangToSpv.h.85C47BD29A60DB34.idx  InReadableOrder.cpp.25A7757F5872EAA8.idx  InfoSink.cpp.8AE21052470DB6E0.idx  InfoSink.h.5E9521B64E7A8EC3.idx  Initialize.cpp.A0E833CD72F02645.idx  Initialize.h.0EDD1E4704E2E37E.idx  InitializeDll.cpp.2E05A80EB51D84E6.idx  InitializeDll.h.FC06962B966B8660.idx  InitializeGlobals.h.3C9FED662EF831EF.idx  IntermTraverse.cpp.35AB1174ADB62158.idx  Intermediate.cpp.2D45499E768B4DD5.idx  Link.cpp.032D0DBC09BAF7A9.idx  LiveTraverser.h.B0A714B9A134D924.idx  Logger.cpp.A75A7024CDA898E1.idx  Logger.h.0161533699871595.idx  NonSemanticDebugPrintf.h.0258B4BB3188DC5C.idx  ParseContextBase.cpp.97470AD9797A9F48.idx  ParseHelper.cpp.46AF5CB598C81BEA.idx  ParseHelper.h.6200482EA6C112A0.idx  PoolAlloc.cpp.EA8B32C3A14BFF8B.idx  PoolAlloc.h.F3B7B2C98A03B2ED.idx  Pp.cpp.EC34F66ED54A696B.idx  PpAtom.cpp.6096841FBCD2BC0D.idx  PpContext.cpp.36088018C71DB00D.idx  PpContext.h.9DEC326141B646E7.idx  PpScanner.cpp.BDB0894DBF44E570.idx  PpTokens.cpp.D6D56CBAB3589261.idx  PpTokens.h.4D37132853ED0610.idx  (+74 more)
NativeApp/: CMakeLists.txt
NativeApp/MacOS/Source/: FullscreenWindow.m  GLView.h  GLView.mm  MVKView.h  MVKView.mm  MetalView.h  MetalView.mm  ModeSelectionViewController.h  ModeSelectionViewController.mm  ViewBase.h  ViewBase.mm  ViewController.h  ViewController.mm  WindowController.mm  main.m
NativeApp/src/Linux/: LinuxMain.cpp
NativeApp/src/Win32/: WinMain.cpp
SampleAppBase/: CMakeLists.txt
SampleAppBase/include/: FirstPersonCamera.hpp  InputController.hpp  SampleApp.hpp  SampleBase.hpp
SampleAppBase/include/Linux/: InputControllerLinux.hpp
SampleAppBase/include/MacOS/: InputControllerMacOS.hpp
SampleAppBase/include/UWP/: InputControllerUWP.hpp
SampleAppBase/include/Win32/: InputControllerWin32.hpp
SampleAppBase/src/: FirstPersonCamera.cpp  SampleApp.cpp  SampleBase.cpp
SampleAppBase/src/Linux/: InputControllerLinux.cpp  SampleAppLinux.cpp
SampleAppBase/src/MacOS/: InputControllerMacOS.cpp  SampleAppMacOS.mm
SampleAppBase/src/UWP/: ImguiUWPEventHelper.cpp  ImguiUWPEventHelper.h  InputControllerEventHandlerUWP.cpp  InputControllerEventHandlerUWP.h  SampleAppUWP.cpp
assets/shaders/: structures.fxh
assets/shaders/chunk/: chunk.vsh
assets/shaders/cube/: cube.psh
assets/shaders/plane/: plane.vsh
assets/shaders/sun/: sun.fx
cmake/: engine.cmake  ios.cmake
desktop/: CMakeLists.txt
desktop/src/: main.cpp  platform.hpp  platform.mm
desktop/src/window/: CMakeLists.txt  window_manager.cpp  window_manager.hpp
engine/: CMakeLists.txt  engine.cpp  engine.hpp
engine/Resources/: Info.plist
engine/Resources/AppIcon.xcassets/AppIcon.appiconset/: Contents.json
engine/assets/shaders/: Cube.psh
engine/assets/shaders/cube/: cube.vsh
engine/assets/shaders/plane/: plane.psh  plane.vsh
engine/component/: CMakeLists.txt  camera.hpp  gravity.hpp
engine/coordinator/: CMakeLists.txt  coordinator.hpp
engine/ecs/: CMakeLists.txt  README.md  ecs_component_array.hpp  ecs_component_manager.hpp  ecs_system.hpp  ecs_system_manager.hpp  ecs_types.hpp
engine/event/: CMakeLists.txt  event.hpp  event_types.hpp
engine/graphics/: CMakeLists.txt  graphics_manager.cpp  graphics_manager.hpp  graphics_shader_include.hpp  graphics_utils.cpp  graphics_utils.hpp
engine/object/: CMakeLists.txt  chunk.hpp  cube.hpp  object.cpp  object.hpp  plane.hpp
engine/object/sphere/: uv_sphere.cpp  uv_sphere.hpp
engine/src/: CMakeLists.txt  CrossPlatformGraphicsEngine.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GraphicsEngineInterface.hpp  GraphicsEngineMacOS.hpp  GraphicsEngineMacOSImplem.mm  coordinator.hpp  engine.cpp  graphics_engine.cpp  graphics_engine.hpp  main.cpp  platform.hpp  platform.mm
engine/src/camera/: CMakeLists.txt  camera.cpp  camera.hpp
engine/src/component/: CMakeLists.txt  camera.hpp  collidable.hpp  rigid_body.hpp  transform.hpp
engine/src/coordinator/: CMakeLists.txt  coordinator.hpp
engine/src/ecs/: CMakeLists.txt  ecs_component_array.hpp  ecs_entity_manager.hpp
engine/src/event/: CMakeLists.txt  event_manager.hpp
engine/src/graphics/: CMakeLists.txt  graphics_manager.cpp  graphics_manager.hpp
engine/src/object/: CMakeLists.txt  cube.hpp  object.cpp  object.hpp
engine/src/object/sphere/: CMakeLists.txt
engine/src/sdk/: CMakeLists.txt
engine/src/system/: CMakeLists.txt  camera_control_system.cpp  camera_control_system.hpp  physics_system.cpp  physics_system.hpp
engine/src/utils/: CMakeLists.txt  types.hpp  utils_hash.hpp  utils_types.hpp
engine/src/window/: CMakeLists.txt  window_manager.cpp  window_manager.hpp
engine/system/: CMakeLists.txt  camera_control_system.cpp  camera_control_system.hpp  physics_system.cpp
engine/utils/: CMakeLists.txt  array_3D.hpp  utils_maths.hpp
framework/: CMakeLists.txt  EngineWrapper.h  EngineWrapper.mm  install_name.sh
framework/Resources/: Info.plist
framework/Sources/: EngineWrapper.h  EngineWrapper.mm
iosapp/: CMakeLists.txt
iosapp/Resources/: Info.plist
iosapp/Sources/: AppDelegate.swift  Bridging-Header.h  CustomGestureRecognizer.swift  Float+Extensions.swift  ViewController.swift  Wrapper.h  Wrapper.mm  main.swift
macos-app/: CMakeLists.txt
macos-app/Sources/: AppDelegate.swift  Bridging-Header.h  Wrapper.h  Wrapper.mm
src/: AtmosphereSample.cpp  AtmosphereSample.hpp  main.cpp
src/Terrain/: DynamicQuadTreeNode.hpp  EarthHemisphere.cpp  EarthHemisphere.hpp  ElevationDataSource.cpp  ElevationDataSource.hpp  HierarchyArray.hpp
submodules/: CMakeLists.txt
(+7 files in other folders)
